fix cmake for windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,10 +62,10 @@ if(WIN32)
     )
 
     if (COMPILER_VERSION_RESULT EQUAL 0)
-      if (COMPILER_VERSION_OUTPUT MATCHES "MinGW-W64")
-        set(LIBGLFW ${PROJECT_SOURCE_DIR}/lib/libglfw3.a)
-      else()
+      if (COMPILER_VERSION_OUTPUT MATCHES "i686-w64-mingw32")
         set(LIBGLFW ${PROJECT_SOURCE_DIR}/lib-mingw-32/libglfw3.a)
+      else()
+        set(LIBGLFW ${PROJECT_SOURCE_DIR}/lib/libglfw3.a)
       endif()
     else()
         message(FATAL_ERROR "Failed to get MinGW compiler version.")
