add free camera class to player

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
-    "files.associations": {
-        "sstream": "cpp",
-        "iterator": "cpp"
-    }
+  "files.associations": {
+    "sstream": "cpp",
+    "iterator": "cpp",
+    "cmath": "cpp"
+  }
 }
