create obj loader class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,13 @@ set(SOURCES
   src/scene.cpp
   src/entity.cpp
   src/cubeEntity.cpp
+  src/objEntity.cpp
   src/lookAtCamera.cpp
   src/freeCamera.cpp
   src/matrices.cpp
   src/player.cpp
   src/gpuProgramController.cpp
+  src/tiny_obj_loader.cpp
 )
 
 cmake_minimum_required(VERSION 3.5.0)
