--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ set(SOURCES
   src/scene.cpp
   src/stb_image.cpp
   src/tiny_obj_loader.cpp
+  src/textureLoader.cpp
 )
 
 cmake_minimum_required(VERSION 3.5.0)
